# fkill

./: Cargo.toml  README.md
.cargo/: config.toml
.vim/: coc-settings.json
fkill/: Cargo.toml
fkill-common/: Cargo.toml
fkill-common/src/: lib.rs
fkill-ebpf/: Cargo.toml
fkill-ebpf/src/: bindings_process_exec.rs  bindings_process_fork.rs  main.rs
fkill/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
