[package]
name = "fkill-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
user = ["aya"]

[dependencies]
aya = { version = "0.12", optional = true }

[lib]
path = "src/lib.rs"
[target.'cfg(target_arch = "aarch64")'.dependencies]
syscalls = { version = "*", default-features = false, features = ["aarch64"] }
