[package]
name = "fkill"
version = "0.1.0"
edition = "2021"
publish = false

[target.'cfg(target_arch = "aarch64")'.dependencies]
syscalls = { version = "*", default-features = false, features = ["aarch64"] }


[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
fkill-common = { path = "../fkill-common", features = ["user"] }
anyhow = "1"
env_logger = "0.11.3"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
hexplay = "*"
clap = "4.5.15"
sysinfo = "0.25"
regex = "*"
nix =  { version = "*", features = ["signal"] }

[[bin]]
name = "fkill"
path = "src/main.rs"
